--- a/download.html
+++ b/download.html
@@ -19,7 +19,7 @@
             </div>
             <div class="column">
                 <p class="header">Versions de la traduction</p>
-                <p><a href="https://drive.google.com/file/d/1gn60nymBBkZnQqBnkW75E9r1vX9TtPPU/view?usp=sharing">V1</a>
+                <p><a href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v1.0.0/TheCaseOfTheGoldenIdol-1.0.7_FR-1.0.0.zip">1.0.0</a>
                 </p>
             </div>
             <div class="column">
