fix english saves link

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             </strong>
         </p>
 
+        <p>Saves: <a href="backup.html">Click here</a></p>
+
         <p>Don't hesitate to send us your feedback to help us improve this French version. </p>
     </section>
 </body>
