--- a/download.html
+++ b/download.html
@@ -24,6 +24,21 @@
                 <p>1.0.7</p>
                 <p>
                     <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v1.1.1/TheCaseOfTheGoldenIdol-1.0.7_FR-1.1.1.zip">1.1.1</a>
+                </p>
+                <div>
+                    Changements mineurs :
+                    <ul>
+                        <li>Chapitre 2 - Scénario 2 : Lettre destiné à Ada changée</li>
+                        <li>DLC Spider Of Lanka - Scénario 3 : Messages du Maître de la bibliothèque changés</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="row">
+                <p>1.0.7</p>
+                <p>
+                    <a
                         href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v1.1.0/TheCaseOfTheGoldenIdol-1.0.7_FR-1.1.0.zip">1.1.0</a>
                 </p>
                 <div>DLC Traduit
