--- a/download.html
+++ b/download.html
@@ -24,6 +24,32 @@
                 <p>1.0.7</p>
                 <p>
                     <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v1.1.2/TheCaseOfTheGoldenIdol-1.0.7_FR-1.1.2.zip">1.1.2</a>
+                </p>
+                <div>
+                    Changements mineurs :
+                    <ul>
+                        <li>Chapitre 1 - Scénario 1 : île de Monkey Paw</li>
+                        <li>Chapitre 1 - Scénario 1 : Albert : un poignard</li>
+                        <li>Chapitre 1 - Scénario 3 : lettre à Edmund : fin de la lettre manquante</li>
+                        <li>Chapitre 2 - Scénario 1 : Poster de musique</li>
+                        <li>Chapitre 2 - Scénario 1 : "La montre tourne"</li>
+                        <li>Chapitre 2 - Scénario 2 : Dessin de Peter mal centré</li>
+                        <li>Chapitre 2 - Scénario 2 : Repas</li>
+                        <li>Chapitre 2 - Scénario 2 : Lettre de George Brydges</li>
+                        <li>Chapitre 2 - Scénario 2 : Note sur le repas</li>
+                        <li>Chapitre 3 - Scénario 1 : Uniformisation bague</li>
+                        <li>Chapitre 3 - Scénario 2 : Préparation du miracle : "3." en trop</li>
+                        <li>Chapitre 3 - Scénario 2 : Vol : texte réagencé</li>
+                        <li>Chapitre 4 - Scénario 2 : Notes de l'espion : uniforme d'insurgés</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="row">
+                <p>1.0.7</p>
+                <p>
+                    <a
                         href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v1.1.1/TheCaseOfTheGoldenIdol-1.0.7_FR-1.1.1.zip">1.1.1</a>
                 </p>
                 <div>
