--- a/backup.html
+++ b/backup.html
@@ -63,7 +63,7 @@
         </ol>
         <p><a href="index.html">Retour à l'accueil</a></p>
     </section>
-    <script src="js/backup.js/"></script>
+    <script src="js/backup.js"></script>
 </body>
 
 </html>
