--- a/download.html
+++ b/download.html
@@ -24,6 +24,26 @@
                 <p>1.0.7</p>
                 <p>
                     <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v1.1.3/TheCaseOfTheGoldenIdol-1.0.7_FR-1.1.3.zip">1.1.3</a>
+                </p>
+                <div>
+                    Changements mineurs :
+                    <ul>
+                        <li>Chapitre 1 - Scénario 1 : avoir financé</li>
+                        <li>Chapitre 1 - Scénario 2 : Agenda : Lavé et habillé, Déjeuné un</li>
+                        <li>Chapitre 1 - Scénario 2 : qui s'est produite -> qui a eu lieu</li>
+                        <li>Chapitre 1 - Scénario 3 : Aphorismes : reculez</li>
+                        <li>Chapitre 1 - Scénario 3 : Pari : Show</li>
+                        <li>Chapitre 1 - Scénario 3 : Papier déchiré : Cher, Chère</li>
+                        <li>Chapitre 2 - Scénario 3 : Instruction : cabine -> cabane</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="row">
+                <p>1.0.7</p>
+                <p>
+                    <a
                         href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v1.1.2/TheCaseOfTheGoldenIdol-1.0.7_FR-1.1.2.zip">1.1.2</a>
                 </p>
                 <div>
