--- a/backup.html
+++ b/backup.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Golden Idol - Français</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/png" />
 </head>
 
 <body>
@@ -25,8 +26,9 @@
             </li>
             <li>
                 <p>Télécharger la sauvegarde correspondant à la progression que vous voulez récupérer :</p>
+                <p>(les sauvegardes des DLC comprenent le contenu des sauvegardes précédentes)</p>
                 <p><select id="select-save">
-                        <option id=" 0">Chapitre 1 - Scénario 1 terminé</option>
+                        <option id="0">Chapitre 1 - Scénario 1 terminé</option>
                         <option id="1">Chapitre 1 - Scénario 2 terminé</option>
                         <option id="2">Chapitre 1 terminé</option>
                         <option id="3">Chapitre 2 - Scénario 1 terminé</option>
@@ -38,9 +40,12 @@
                         <option id="9">Chapitre 4 - Scénario 1 terminé</option>
                         <option id="10">Chapitre 4 terminé</option>
                         <option id="11">Jeu principal terminé</option>
-                        <option id="12">Jeu + Spider of Lanka - Scénario 1 terminé</option>
-                        <option id="13">Jeu + Spider of Lanka - Scénario 2 terminé</option>
-                        <option id="14">Jeu + Spider of Lanka terminé</option>
+                        <option id="12">Spider of Lanka - Scénario 1 terminé</option>
+                        <option id="13">Spider of Lanka - Scénario 2 terminé</option>
+                        <option id="14">Spider of Lanka terminé</option>
+                        <option id="15">Lemurian Vampire - Scénario 1 terminé</option>
+                        <option id="16">Lemurian Vampire - Scénario 2 terminé</option>
+                        <option id="17">Lemurian Vampire terminé</option>
                     </select>
                     <button id="dl-save">Télécharger</button>
                 </p>
