--- a/download.html
+++ b/download.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Golden Idol - Français</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/png" />
 </head>
 
 <body>
@@ -18,6 +19,19 @@
                 <p class="header">Versions du jeu</p>
                 <p class="header">Versions de la traduction</p>
                 <p class="header">Informations</p>
+            </div>
+
+            <div class="row">
+                <p>2.0.4</p>
+                <p>
+                    <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.0/TheCaseOfTheGoldenIdol-2.0.4_FR-2.0.0.zip">2.0.0</a>
+                </p>
+                <div>
+                    <p>Prise en compte des changements apportés par la version 2.0.4</p>
+                    <p>Méthode d'installation simplifiée</p>
+                    <p>DLC The Lemurian Vampire traduit</p>
+                </div>
             </div>
 
             <div class="row">
@@ -87,7 +101,7 @@
                     <a
                         href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v1.1.0/TheCaseOfTheGoldenIdol-1.0.7_FR-1.1.0.zip">1.1.0</a>
                 </p>
-                <div>DLC Traduit
+                <div>DLC The Spider Of Lanka traduit
                     <p>Changements majeurs (sauvegarde à reset si scénario déjà commencé) :</p>
                     <ul>
                         <li>Chapitre 3 - Scénario 1 : les mots création et évaluation manquant</li>
