Navbar + specify savefile name

--- a/backup.html
+++ b/backup.html
@@ -12,6 +12,13 @@
 
 <body>
     <h1>Sauvegardes</h1>
+    <nav class="navbar">
+        <ul class="horizontal">
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="download.html">Téléchargement</a></li>
+            <li><a class="active" href="backup.html">Sauvegardes</a></li>
+        </ul>
+    </nav>
     <section>
         <p>Si vous avez un soucis avec votre progression et que vous devez reset votre sauvegarde,
             vous pouvez suivre les instructions ci-dessous pour ne pas avoir à tout refaire.
@@ -60,7 +67,8 @@
                     l'explorateur</p>
             </li>
             <li>
-                <p>Remplacer le contenu de la sauvegarde actuelle par le contenu de la sauvegarde téléchargée.</p>
+                <p>Remplacer le contenu de la sauvegarde actuelle ([CHAINE DE CHIFFRE]_savegame_fr.save) par
+                    le contenu de la sauvegarde téléchargée.</p>
             </li>
             <li>
                 <p>Lancer le jeu, ça devrait fonctionner.</p>
