--- a/download.html
+++ b/download.html
@@ -12,9 +12,15 @@
 
 <body>
     <h1>Téléchargement</h1>
+    <nav class="navbar">
+        <ul class="horizontal">
+            <li><a href="index.html">Accueil</a></li>
+            <li><a class="active" href="download.html">Téléchargement</a></li>
+            <li><a href="backup.html">Sauvegardes</a></li>
+        </ul>
+    </nav>
     <section>
         <div class="container">
-
             <div class="row">
                 <p class="header">Versions du jeu</p>
                 <p class="header">Versions de la traduction</p>
