--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 
 <body>
     <h1>The Case Of The Golden Idol - Traduction Française</h1>
+    <nav class="navbar">
+        <ul class="horizontal">
+            <li><a class="active" href="index.html">Accueil</a></li>
+            <li><a href="download.html">Téléchargement</a></li>
+            <li><a href="backup.html">Sauvegardes</a></li>
+        </ul>
+    </nav>
     <section>
         <h2>Salut !</h2>
         <p>Voici une traduction française de The Case Of The Golden Idol.</p>
