--- a/download.html
+++ b/download.html
@@ -17,6 +17,7 @@
             <li><a href="index.html">Accueil</a></li>
             <li><a class="active" href="download.html">Téléchargement</a></li>
             <li><a href="backup.html">Sauvegardes</a></li>
+            <li><a href="problem.html">Signaler un problème</a></li>
         </ul>
     </nav>
     <section>
