--- a/download.html
+++ b/download.html
@@ -27,6 +27,16 @@
                 <p class="header">Versions de la traduction</p>
                 <p class="header">Informations</p>
             </div>
+            <div class="row">
+                <p>2.0.5</p>
+                <p>
+                    <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.1/TheCaseOfTheGoldenIdol-2.0.5_FR-2.0.1.zip">2.0.1</a>
+                </p>
+                <div>
+                    <p>Prise en compte des changements apportés par la version 2.0.5</p>
+                </div>
+            </div>
 
             <div class="row">
                 <p>2.0.4</p>
