--- a/download.html
+++ b/download.html
@@ -31,6 +31,31 @@
                 <p>2.0.5</p>
                 <p>
                     <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.2/TheCaseOfTheGoldenIdol-2.0.5_FR-2.0.2.zip">2.0.2</a>
+                </p>
+                <div>
+                    <p>Correction de lignes de surbrillance pas alignées</p>
+                    <p>Correction d'images non traduites</p>
+                    Changements mineurs :
+                    <ul>
+                        <li>Chapitre 1 - Scénario 3 : ASTONISHING -> L'ÉTONNANT</li>
+                        <li>Chapitre 2 - Scénario 1 : WANTED et REVENGE traduits</li>
+                        <li>Chapitre 2 - Scénario 1 : Ajout de rimes dans le poème</li>
+                        <li>Chapitre 2 - Scénario 3 : workshop -> atelier</li>
+                        <li>DLC Spider Of Lanka - Scénario 1 : Jampupur -> Jambupur</li>
+                        <p>Différents scénarios :</p>
+                        <li>London Gazetter -> Gazette de Londres</li>
+                        <li>finest-> meilleur</li>
+                        <li>DLC Lemurian Vampire : notes de Zubiri : 1741 -> 1742</li>
+                        <p>Cutscene :</p>
+                        <li>Coroner -> officier</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <p>2.0.5</p>
+                <p>
+                    <a
                         href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.1/TheCaseOfTheGoldenIdol-2.0.5_FR-2.0.1.zip">2.0.1</a>
                 </p>
                 <div>
