Clarify backup explainations

--- a/backup.html
+++ b/backup.html
@@ -24,13 +24,17 @@
         <p>Si vous avez un soucis avec votre progression et que vous devez reset votre sauvegarde,
             vous pouvez suivre les instructions ci-dessous pour ne pas avoir à tout refaire.
         </p>
+        <p>
+            Les sauvegardes peuvent aussi être utilisées pour récupérer votre progression obtenue sans la traduction
+            installée.
+        </p>
         <h2>Instructions</h2>
         <ol>
             <li>
-                <p>Reset votre progression dans le jeu.</p>
+                <p>Réinitialiser votre progression dans le jeu (bouton pour reset) en ayant la traduction active.</p>
             </li>
             <li>
-                <p>Lancer le premier scénario pour générer une nouvelle sauvegarde.</p>
+                <p>Lancer le premier scénario pour générer une nouvelle sauvegarde puis fermer le jeu.</p>
             </li>
             <li>
                 <p>Télécharger la sauvegarde correspondant à la progression que vous voulez récupérer :</p>
@@ -68,8 +72,9 @@
                     l'explorateur</p>
             </li>
             <li>
-                <p>Remplacer le contenu de la sauvegarde actuelle ([CHAINE DE CHIFFRE]_savegame_fr.save) par
-                    le contenu de la sauvegarde téléchargée.</p>
+                <p>Ouvrir le fichier de sauvegarde actuel ([CHAINE DE CHIFFRE]_savegame_fr.save) et le fichier de
+                    sauvegarde téléchargé avec un éditeur de texte (bloc-notes) puis remplacer le contenu de la
+                    sauvegarde actuelle par celle téléchargée</p>
             </li>
             <li>
                 <p>Lancer le jeu, ça devrait fonctionner.</p>
