--- a/download.html
+++ b/download.html
@@ -31,6 +31,20 @@
                 <p>2.0.5</p>
                 <p>
                     <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.3/TheCaseOfTheGoldenIdol-2.0.5_FR-2.0.3.zip">2.0.3</a>
+                </p>
+                <div>
+                    Changements mineurs :
+                    <ul>
+                        <li>Chapitre 3 - Scénario 3 : témoignagne de Podrick : lunettes -> verres</li>
+                        <li>Chapitre 3 - Scénario 3 : témoignagne de Alistair : traduction manquante</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <p>2.0.5</p>
+                <p>
+                    <a
                         href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.2/TheCaseOfTheGoldenIdol-2.0.5_FR-2.0.2.zip">2.0.2</a>
                 </p>
                 <div>
