--- a/download.html
+++ b/download.html
@@ -31,6 +31,20 @@
                 <p>2.0.5</p>
                 <p>
                     <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.4/TheCaseOfTheGoldenIdol-2.0.5_FR-2.0.4.zip">2.0.4</a>
+                </p>
+                <div>
+                    <p>Ajout de la version du patch FR à l'écran titre</p>
+                    Changements mineurs :
+                    <ul>
+                        <li>Epilogue : Correction de l'idole d'or qui fait crash le jeu</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <p>2.0.5</p>
+                <p>
+                    <a
                         href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.3/TheCaseOfTheGoldenIdol-2.0.5_FR-2.0.3.zip">2.0.3</a>
                 </p>
                 <div>
