--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
     <section>
         <h2>Salut !</h2>
-        <p>Voici une traduction française de The Case Of The Golden Idol pour la version Steam.</p>
+        <p>Voici une traduction française de The Case Of The Golden Idol pour la version Steam et GOG.</p>
         <p>Téléchargement : <a href="download.html">Cliquer ici</a>
         </p>
         <p><strong>Attention, c'est une traduction de fan, il y a donc peut être des problèmes d'interface, des
