--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         <p>Sauvegardes : <a href="backup.html">Cliquer ici</a></p>
 
         <p>N'hésitez pas à faire des retours pour améliorer cette version française <a href="problem.html">ici</a></p>
+        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/tTyxG2td9j8" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
     </section>
 </body>
 
