--- a/download.html
+++ b/download.html
@@ -36,6 +36,45 @@
                 <p>2.0.1a</p>
                 <p>
                     <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.5/TheCaseOfTheGoldenIdol-GOG-2.0.1a_FR-2.0.5.zip">2.0.5</a>
+                </p>
+                <div>
+                    <p>Agrandissement de certains textes</p>
+                    <p>Espaces et points en trop supprimés</p>
+                    <p>Réduction de la taille du texte de l'emplacement des mots</p>
+                    Changements mineurs :
+                    <ul>
+                        <li>Chapitre 2 - Scénario 1 : Ash Blair : le prochain -> la prochaine</li>
+                        <li>Chapitre 2 - Scénario 2 : Ajustement de la lettre à Ada</li>
+                        <li>Chapitre 2 - Scénario 2 : Instructions de la cuisine : réveillé et habillé sans e</li>
+                        <li>Chapitre 2 - Scénario 2 : Table : consommé -> mangé</li>
+                        <li>Chapitre 2 - Scénario 2 : Note pour Lucia : devrait -> doit</li>
+                        <li>Chapitre 2 - Scénario 3 : Pip : Coin -> Doubloon</li>
+                        <li>Chapitre 2 - Scénario 3 : Keene : pièce de confiserie -> confiserie</li>
+                        <li>Chapitre 3 - Scénario 1 : Aquitanie -> Aquitaine</li>
+                        <li>Chapitre 3 - Scénario 1 : Sceaux des rituels repositionnés</li>
+                        <li>Chapitre 3 - Scénario 1 : chambre ci-dessous -> chambre en dessous</li>
+                        <li>Chapitre 3 - Scénario 1 : Panneau de réflexion : Rituel de/d'</li>
+                        <li>Chapitre 3 - Scénario 2 : Chroniques : barre de séparation repositionnée</li>
+                        <li>Chapitre 3 - Scénario 2 : Poster du phare : mots repositionnés</li>
+                        <li>Chapitre 3 - Scénario 3 : témoignages de Leopold : assoupi sans e</li>
+                        <li>Chapitre 3 - Scénario 3 : témoignages de James : conjugaison au présent au lieu de passé
+                        <li>Chapitre 3 - Scénario 3 : témoignages de Billiam : j'ai -> il a
+                            simple</li>
+                        <li>Chapitre 4 - Scénario 1 : Gazette : multipartite -> multipartie</li>
+                        <li>Chapitre 4 - Scénario 1 : Panneau de réflexion : importante avec un e</li>
+                        <li>Chapitre 4 - Scénario 2 : Notes de l'espion : uniformisation des heures</li>
+                        <li>Epilogue : Lazarus : Texte repositionné</li>
+                        <li>DLC Spider Of Lanka - Scénario 2 : Code décodé : Image repositionnée </li>
+                        <li>DLC Spider Of Lanka - Scénario 2 : Maître-espion ne dépasse plus</li>
+                        <li>DLC Spider Of Lanka - Scénario 3 : Aquitan -> Aquitaine </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <p>2.0.1a</p>
+                <p>
+                    <a
                         href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.4/TheCaseOfTheGoldenIdol-GOG-2.0.1a_FR-2.0.4.zip">2.0.4</a>
                 </p>
                 <div>
@@ -49,6 +88,45 @@
                 <p class="header">Versions du jeu</p>
                 <p class="header">Versions de la traduction</p>
                 <p class="header">Informations</p>
+            </div>
+            <div class="row">
+                <p>2.0.5</p>
+                <p>
+                    <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.5/TheCaseOfTheGoldenIdol-2.0.5_FR-2.0.5.zip">2.0.5</a>
+                </p>
+                <div>
+                    <p>Agrandissement de certains textes</p>
+                    <p>Espaces et points en trop supprimés</p>
+                    <p>Réduction de la taille du texte de l'emplacement des mots</p>
+                    Changements mineurs :
+                    <ul>
+                        <li>Chapitre 2 - Scénario 1 : Ash Blair : le prochain -> la prochaine</li>
+                        <li>Chapitre 2 - Scénario 2 : Ajustement de la lettre à Ada</li>
+                        <li>Chapitre 2 - Scénario 2 : Instructions de la cuisine : réveillé et habillé sans e</li>
+                        <li>Chapitre 2 - Scénario 2 : Table : consommé -> mangé</li>
+                        <li>Chapitre 2 - Scénario 2 : Note pour Lucia : devrait -> doit</li>
+                        <li>Chapitre 2 - Scénario 3 : Pip : Coin -> Doubloon</li>
+                        <li>Chapitre 2 - Scénario 3 : Keene : pièce de confiserie -> confiserie</li>
+                        <li>Chapitre 3 - Scénario 1 : Aquitanie -> Aquitaine</li>
+                        <li>Chapitre 3 - Scénario 1 : Sceaux des rituels repositionnés</li>
+                        <li>Chapitre 3 - Scénario 1 : chambre ci-dessous -> chambre en dessous</li>
+                        <li>Chapitre 3 - Scénario 1 : Panneau de réflexion : Rituel de/d'</li>
+                        <li>Chapitre 3 - Scénario 2 : Chroniques : barre de séparation repositionnée</li>
+                        <li>Chapitre 3 - Scénario 2 : Poster du phare : mots repositionnés</li>
+                        <li>Chapitre 3 - Scénario 3 : témoignages de Leopold : assoupi sans e</li>
+                        <li>Chapitre 3 - Scénario 3 : témoignages de James : conjugaison au présent au lieu de passé
+                        <li>Chapitre 3 - Scénario 3 : témoignages de Billiam : j'ai -> il a
+                            simple</li>
+                        <li>Chapitre 4 - Scénario 1 : Gazette : multipartite -> multipartie</li>
+                        <li>Chapitre 4 - Scénario 1 : Panneau de réflexion : importante avec un e</li>
+                        <li>Chapitre 4 - Scénario 2 : Notes de l'espion : uniformisation des heures</li>
+                        <li>Epilogue : Lazarus : Texte repositionné</li>
+                        <li>DLC Spider Of Lanka - Scénario 2 : Code décodé : Image repositionnée </li>
+                        <li>DLC Spider Of Lanka - Scénario 2 : Maître-espion ne dépasse plus</li>
+                        <li>DLC Spider Of Lanka - Scénario 3 : Aquitan -> Aquitaine </li>
+                    </ul>
+                </div>
             </div>
             <div class="row">
                 <p>2.0.5</p>
