--- a/problem.html
+++ b/problem.html
@@ -27,12 +27,12 @@
             action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSevNowwgrc0XijFzPAKLEqtlxb7EuvPvvM41pETEQJtsXxekA/formResponse">
             <div class="form-group">
                 <label for="gameVersion">Version du jeu :</label>
-                <input type="text" id="gameVersion" name="entry.171569189" placeholder="2.0.5"
+                <input type="text" id="gameVersion" name="entry.171569189" placeholder="2.0.5 | 2.0.1a"
                     pattern="[0-9].[0-9].[0-9][a-z]" required />
             </div>
             <div class="form-group">
                 <label for="patchVersion">Version de la traduction :</label>
-                <input type="text" id="patchVersion" name="entry.1906005135" placeholder="2.0.4"
+                <input type="text" id="patchVersion" name="entry.1906005135" placeholder="2.0.5"
                     pattern="[0-9].[0-9].[0-9]" required />
             </div>
             <div class="form-group">
