--- a/download.html
+++ b/download.html
@@ -33,6 +33,19 @@
                 <p class="header">Informations</p>
             </div>
             <div class="row">
+                <div class="row">
+                    <p>2.0.1a</p>
+                    <p>
+                        <a
+                            href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.6/TheCaseOfTheGoldenIdol-GOG-2.0.1a_FR-2.0.6.zip">2.0.6</a>
+                    </p>
+                    <div>
+                        Changements mineurs :
+                        <ul>
+                            <li>Chapitre 2 - Scénario 2 : zone cliquable sur "Intendants" au lieu de "Confrérie"</li>
+                        </ul>
+                    </div>
+                </div>
                 <p>2.0.1a</p>
                 <p>
                     <a
@@ -88,6 +101,19 @@
                 <p class="header">Versions du jeu</p>
                 <p class="header">Versions de la traduction</p>
                 <p class="header">Informations</p>
+            </div>
+            <div class="row">
+                <p>2.0.5</p>
+                <p>
+                    <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.6/TheCaseOfTheGoldenIdol-2.0.5_FR-2.0.6.zip">2.0.6</a>
+                </p>
+                <div>
+                    Changements mineurs :
+                    <ul>
+                        <li>Chapitre 2 - Scénario 2 : zone cliquable sur "Intendants" au lieu de "Confrérie"</li>
+                    </ul>
+                </div>
             </div>
             <div class="row">
                 <p>2.0.5</p>
