--- a/download.html
+++ b/download.html
@@ -32,7 +32,33 @@
                 <p class="header">Versions de la traduction</p>
                 <p class="header">Informations</p>
             </div>
-
+            <div class="row">
+                <p>2.0.1a</p>
+                <p>
+                    <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.7/TheCaseOfTheGoldenIdol-GOG-2.0.1a_FR-2.0.7.zip">2.0.7</a>
+                </p>
+                <div>
+                    <p>L'option pour réinitialiser le scénario en cours n'était pas affiché dans le menu de pause</p>
+                    <p>Lémurian -> Lémurien (cohérence avec Italian -> Italien et le continent Lemuria -> Lémurie comme
+                        Italia -> Italie)</p>
+                    <p>Lankan -> Lankais (cohérence avec Sri Lankan -> Sri Lankais)</p>
+                    Changements majeurs (sauvegarde à reset si scénario déjà commencé ou utiliser les sauvegardes du
+                    site) :
+                    <ul>
+                        <li>Chapitre 3 - Scénario 3 : sherry -> xérès</li>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Lemurian -> Lémurien</li>
+                    </ul>
+                    Changements mineurs :
+                    <ul>
+                        <li>Chapitre 2 - Scénario 1 : Myosotis -> "Ne m'oublie pas"</li>
+                        <li>Chapitre 4 - Scénario 2 : Lazare -> Lazarus et Pierre -> Peter</li>
+                        <li>Chapitre 4 - Scénario 2 : Myosotis -> "Ne m'oublie pas"</li>
+                        <li>Chapitre 4 - Scénario 2 : Notes de Lazarus : Alistair Koch : "prêt" en double</li>
+                        <li>Epilogue : Appuyer pour revenir -> Retour au menu</li>
+                    </ul>
+                </div>
+            </div>
             <div class="row">
                 <p>2.0.1a</p>
                 <p>
@@ -102,6 +128,33 @@
                 <p class="header">Versions du jeu</p>
                 <p class="header">Versions de la traduction</p>
                 <p class="header">Informations</p>
+            </div>
+            <div class="row">
+                <p>2.0.5</p>
+                <p>
+                    <a
+                        href="https://github.com/CaseOfGoldenIdolTranslationModding/TraductionFR/releases/download/v2.0.7/TheCaseOfTheGoldenIdol-2.0.5_FR-2.0.7.zip">2.0.7</a>
+                </p>
+                <div>
+                    <p>L'option pour réinitialiser le scénario en cours n'était pas affiché dans le menu de pause</p>
+                    <p>Lémurian -> Lémurien (cohérence avec Italian -> Italien et le continent Lemuria -> Lémurie comme
+                        Italia -> Italie)</p>
+                    <p>Lankan -> Lankais (cohérence avec Sri Lankan -> Sri Lankais)</p>
+                    Changements majeurs (sauvegarde à reset si scénario déjà commencé ou utiliser les sauvegardes du
+                    site) :
+                    <ul>
+                        <li>Chapitre 3 - Scénario 3 : sherry -> xérès</li>
+                        <li>DLC Lemurian Vampire - Scénario 1 : Lemurian -> Lémurien</li>
+                    </ul>
+                    Changements mineurs :
+                    <ul>
+                        <li>Chapitre 2 - Scénario 1 : Myosotis -> "Ne m'oublie pas"</li>
+                        <li>Chapitre 4 - Scénario 2 : Lazare -> Lazarus et Pierre -> Peter</li>
+                        <li>Chapitre 4 - Scénario 2 : Myosotis -> "Ne m'oublie pas"</li>
+                        <li>Chapitre 4 - Scénario 2 : Notes de Lazarus : Alistair Koch : "prêt" en double</li>
+                        <li>Epilogue : Appuyer pour revenir -> Retour au menu</li>
+                    </ul>
+                </div>
             </div>
             <div class="row">
                 <p>2.0.5</p>
